ultimo ajuste link acesso clinicas

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <link rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap">
   </noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=7VNs4L">
-  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=7VNs4L" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=jZCmyv">
+  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=jZCmyv" type="text/css">
 
 
 
@@ -187,7 +187,8 @@
             <img src="assets/images/img-20240804-wa0092.jpeg" alt="">
           </div>
           <div class="grid-item">
-            <img src="assets/images/imagem-do-whatsapp-de-2024-08-13-s-12.43.36-ae869d6e.jpeg" alt="">
+            <img src="assets/images/imagem-do-whatsapp-de-2024-08-13-s-12.43.36-ae869d6e.jpeg"
+              alt="">
           </div>
           <div class="grid-item">
             <img src="assets/images/img-20240804-wa0064.jpg" alt="">
@@ -273,7 +274,8 @@
         <div class="item features-image col-12 col-md-6 col-lg-3 active">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/img-20240804-wa0095.jpg" alt="" title="" data-slide-to="0" data-bs-slide-to="0">
+              <img src="assets/images/img-20240804-wa0095.jpg" alt="" title="" data-slide-to="0"
+                data-bs-slide-to="0">
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mb-3 mt-0 display-7">
@@ -281,16 +283,16 @@
               <h6 class="item-subtitle mbr-fonts-style mt-0 mb-3 display-5"><strong>Clínica de Saúde Mental e
                   Fisioterapia</strong></h6>
 
-              <div class="mbr-section-btn item-footer"><a href="clinica-saude-mental-fisioterapia.html"
-                  class="btn item-btn btn-primary display-7">Saiba Mais</a></div>
+              <div class="mbr-section-btn item-footer"><a class="btn item-btn btn-primary display-7"
+                  href="clinica-saude-mental-fisioterapia.html">Saiba Mais</a></div>
             </div>
           </div>
         </div>
         <div class="item features-image col-12 col-md-6 col-lg-3 active">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/imagem-do-whatsapp-de-2024-08-05-s-22.24.35-45ff542b.jpg" alt="" title=""
-                data-slide-to="1" data-bs-slide-to="1">
+              <img src="assets/images/imagem-do-whatsapp-de-2024-08-05-s-22.24.35-45ff542b.jpg"
+                alt="" title="" data-slide-to="1" data-bs-slide-to="1">
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mb-3 mt-0 display-7">
@@ -298,15 +300,16 @@
               <h6 class="item-subtitle mbr-fonts-style mt-0 mb-3 display-5"><strong>Clínica Multidisciplinar De Terapias
                   Especiais</strong></h6>
 
-              <div class="mbr-section-btn item-footer"><a href="clinica-multidisciplinar-terapias-especiais.html"
-                  class="btn item-btn btn-primary display-7">Saiba Mais</a></div>
+              <div class="mbr-section-btn item-footer"><a class="btn item-btn btn-primary display-7"
+                  href="clinica-multidisciplinar-terapias-especiais.html">Saiba Mais</a></div>
             </div>
           </div>
         </div>
         <div class="item features-image col-12 col-md-6 col-lg-3">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/img-20240804-wa0114.jpeg" alt="" title="" data-slide-to="2" data-bs-slide-to="2">
+              <img src="assets/images/img-20240804-wa0114.jpeg" alt="" title=""
+                data-slide-to="2" data-bs-slide-to="2">
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mb-3 mt-0 display-7">
@@ -322,7 +325,8 @@
         <div class="item features-image col-12 col-md-6 col-lg-3">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/img-20240804-wa0065.jpg" alt="" title="" data-slide-to="3" data-bs-slide-to="3">
+              <img src="assets/images/img-20240804-wa0065.jpg" alt="" title="" data-slide-to="3"
+                data-bs-slide-to="3">
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mb-3 mt-0 display-7">Rio Grande - RS</h5>
@@ -337,7 +341,8 @@
         <div class="item features-image col-12 col-md-6 col-lg-3">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/img-20240804-wa0150.jpg" alt="" title="" data-slide-to="4" data-bs-slide-to="4">
+              <img src="assets/images/img-20240804-wa0150.jpg" alt="" title="" data-slide-to="4"
+                data-bs-slide-to="4">
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mt-0 mb-3 display-7">
@@ -353,7 +358,8 @@
         <div class="item features-image col-12 col-md-6 col-lg-3">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/img-20240804-wa0045.jpg" alt="" title="" data-slide-to="5" data-bs-slide-to="5">
+              <img src="assets/images/img-20240804-wa0045.jpg" alt="" title="" data-slide-to="5"
+                data-bs-slide-to="5">
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mb-3 mt-0 display-7">Goiania - GO</h5>
@@ -367,7 +373,8 @@
         <div class="item features-image col-12 col-md-6 col-lg-3">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/img-20240804-wa0037.jpg" alt="" title="" data-slide-to="6" data-bs-slide-to="6">
+              <img src="assets/images/img-20240804-wa0037.jpg" alt="" title="" data-slide-to="6"
+                data-bs-slide-to="6">
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mb-3 mt-0 display-7">Brasília - DF</h5>
